<resources>
    <string name="app_name">V3 Bash</string>
    <string name="attempt_to_connect">Connecting to server...</string>
    <string name="attempt_to_connect_successful">Successfully connected to server.</string>
    <string name="waiting_for_players">Searching for players...</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="no_connection_to_server">Unable to connect to server.</string>
    <string name="register_successful">Accounts registered successfully !</string>
    <string name="verify_failed">The verification code has expired. Please try again.</string>
    <string name="verify_code_invalid">Wrong verification code.</string>
    <string name="login_failed">Login information is incorrect.</string>
    <string name="register_failed">An account with that username or email already exists.</string>
    <string name="password_max_chars_reached">Password is too long.</string>
    <string name="username_max_chars_reached">Username is too long.</string>
    <string name="email_max_chars_reached">Email is too long.</string>
    <string name="passwords_mismatch">Passwords mismatch.</string>
    <string name="emails_mismatch">Emails mismatch.</string>
    <string name="min_chars_password">Password needs to contain at least 7 characters.</string>
    <string name="verify">Enter the verification code that was sent to your email address.</string>
    <string name="min_chars_username">Username must contain at least 3 characters.</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password2_label">Repeat password</string>
    <string name="email_label">Email</string>
    <string name="email2_label">Repeat email</string>
    <string name="verify_label">Verification code</string>
    <string name="register_label">Register</string>
    <string name="register_panel_label">Register</string>
    <string name="register_panel_verify">Verify</string>
    <string name="login_label">Login</string>
    <string name="exit_game">Exit</string>
    <string name="practice_maze">Maze practice</string>
    <string name="practice_painting">Painting practice</string>
    <string name="play">Play</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="username_invalid_character_p1">Username may not contain the character "</string>
    <string name="username_invalid_character_p2">".</string>
    <string name="password_invalid_character_p1">Password may not contain the character "</string>
    <string name="password_invalid_character_p2">".</string>
    <string name="mode_maze">Maze</string>
    <string name="mode_painting">Painting</string>
    <string name="mode_total">Total</string>
    <string name="mode_hide_and_seek">Hide and seek</string>
    <string name="mode_conquer">Conquer</string>
    <string name="painting_setting_change_bg">Change background color</string>
    <string name="painting_setting_grid">Show grid</string>
    <string name="painting_setting_palette_layout">Change palette layout</string>
</resources>
